<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/NavDrawerToday" />
        <item
            android:id="@+id/nav_wardrobe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/NavDrawerWardrobe" />
        <item
            android:id="@+id/nav_outfits"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/NavDrawerOutfits" />
        <item
            android:id="@+id/nav_pref"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/NavDrawerPreferences" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/NavDrawerShopping" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/NavDrawerProfile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/NavDrawerProfile" />
        <item
            android:id="@+id/nav_loggout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/NavDrawerLogout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/NavDrawerShare" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/NavDrawerSend" />
        </menu>
    </item>

</menu>
